<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/team_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/team_members"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/member1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/team_members"
        android:text="@string/member1"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/member2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/member1"
        android:text="@string/member2"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/member3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/member2"
        android:text="@string/member3"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/member4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/member3"
        android:text="@string/member4"
        android:textSize="20sp"
        android:textColor="@color/black"/>
</RelativeLayout>